[gd_scene load_steps=20 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://textures/balloons.png" type="Texture" id=2]
[ext_resource path="res://textures/pig.png" type="Texture" id=3]
[ext_resource path="res://sounds/chew.smp" type="Sample" id=4]
[ext_resource path="res://sounds/hurt.smp" type="Sample" id=5]
[ext_resource path="res://sounds/jump-c-01.smp" type="Sample" id=6]
[ext_resource path="res://sounds/sit01.smp" type="Sample" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 14, 12 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 7.74411, 2.77452 )

[sub_resource type="CapsuleShape2D" id=3]

custom_solver_bias = 0.0
radius = 8.77326
height = 6.5535

[sub_resource type="Animation" id=4]

resource/name = "eat"
length = 0.3
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_container/sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 0 ]
}

[sub_resource type="Animation" id=5]

resource/name = "fly_x0"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_container/sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("balloon:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1.5, -18 ), Vector2( -1.5, -19 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite_container/sprite:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray(  ),
"transitions": FloatArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("balloon:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("balloons/CollisionShape2D 2:trigger")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("balloons/CollisionShape2D 2:transform/pos")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( -3, 3 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("balloons/CollisionShape2D:transform/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( -4, 2 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("balloons/CollisionShape2D:trigger")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_container/sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("balloon:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1.5, -18 ), Vector2( -1.5, -19 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite_container/sprite:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray(  ),
"transitions": FloatArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("balloon:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("balloons/CollisionShape2D 2:trigger")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("balloons/CollisionShape2D 2:transform/pos")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4, -20 ), Vector2( -4, -21 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("balloons/CollisionShape2D:transform/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -20 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("balloons/CollisionShape2D:trigger")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]

resource/name = "fly_x2"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_container/sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("balloon:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.1 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( -1.5, -19 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite_container/sprite:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray(  ),
"transitions": FloatArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("balloon:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("balloons/CollisionShape2D:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 6, -20 ), Vector2( 4, -20 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("balloons/CollisionShape2D 2:transform/pos")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -22 ), Vector2( -7, -22 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("balloons/CollisionShape2D 2:trigger")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("balloons/CollisionShape2D:trigger")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]

resource/name = "fly_x3"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_container/sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("balloon:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.1 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( -1.5, -19 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite_container/sprite:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray(  ),
"transitions": FloatArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("balloon:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("balloons/CollisionShape2D 2:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -22 ), Vector2( -7, -22 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("balloons/CollisionShape2D 2:trigger")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("balloons/CollisionShape2D:trigger")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("balloons/CollisionShape2D:transform/pos")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 6, -20 ), Vector2( 4, -20 ) ]
}

[sub_resource type="Animation" id=9]

resource/name = "shock"
length = 0.6
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_container/sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56, 0.64 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 5, 0, 5, 0, 5, 0, 5, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("balloon:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("balloons/CollisionShape2D 2:trigger")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("balloons/CollisionShape2D:trigger")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("balloons/CollisionShape2D:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( -3.03144, 4.60144 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("balloons/CollisionShape2D 2:transform/pos")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( -2.64401, 4.76371 ) ]
}

[sub_resource type="SampleLibrary" id=10]

samples/chew = {
"db": -8.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/hurt = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/jump-c-01 = {
"db": 0.0,
"pitch": 2.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/sit01 = {
"db": -15.0,
"pitch": 0.7,
"priority": 0,
"sample": ExtResource( 7 )
}

[sub_resource type="CapsuleShape2D" id=11]

custom_solver_bias = 0.0
radius = 8.15688
height = 6.37556

[sub_resource type="CapsuleShape2D" id=12]

custom_solver_bias = 0.0
radius = 8.61476
height = 8.06917

[node name="player" type="RigidBody2D" groups=[
"player",
]]

transform/pos = Vector2( 110, 46 )
z/relative = false
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 2, 4 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 0.6
bounce = 0.0
gravity_scale = 200.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = false
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
human = false

[node name="balloon" type="Sprite" parent="."]

transform/pos = Vector2( -1.5, -19 )
texture = ExtResource( 2 )
hframes = 6
frame = 2

[node name="collision" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 2, 4 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="jump_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="sit_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="sprite_container" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="sprite_container"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -5, 14 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sprite_container/Area2D"]

transform/pos = Vector2( -5, 14 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="sprite" type="Sprite" parent="sprite_container"]

texture = ExtResource( 3 )
offset = Vector2( 0, 1 )
hframes = 6

[node name="eater" type="Area2D" parent="sprite_container" groups=[
"eater",
]]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 6.22453, 1.49752 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 3
collision/mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="sprite_container/eater"]

transform/pos = Vector2( 6.22453, 1.49752 )
transform/rot = 90.0
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/eat = SubResource( 4 )
anims/fly_x0 = SubResource( 5 )
anims/fly_x1 = SubResource( 6 )
anims/fly_x2 = SubResource( 7 )
anims/fly_x3 = SubResource( 8 )
anims/shock = SubResource( 9 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="sound" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 10 )
config/pitch_random = 0.0

[node name="b_label" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -18.0
margin/top = -46.0
margin/right = 22.0
margin/bottom = -32.0
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="balloons" type="Area2D" parent="." groups=[
"balloon",
]]

input/pickable = true
shapes/0/shape = SubResource( 11 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 6, -20 )
shapes/0/trigger = true
shapes/1/shape = SubResource( 12 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, -8, -22 )
shapes/1/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="balloons"]

transform/pos = Vector2( 6, -20 )
shape = SubResource( 11 )
trigger = true
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="balloons"]

transform/pos = Vector2( -8, -22 )
shape = SubResource( 12 )
trigger = true
_update_shape_index = 1

[connection signal="timeout" from="jump_timer" to="." method="_on_jump_timer_timeout"]

[connection signal="timeout" from="sit_timer" to="." method="_on_sit_timer_timeout"]

[connection signal="body_enter" from="sprite_container/Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="sprite_container/Area2D" to="." method="_on_Area2D_body_exit"]

[connection signal="body_enter" from="sprite_container/eater" to="." method="_on_eater_body_enter"]

[connection signal="area_enter" from="balloons" to="." method="_on_balloons_area_enter"]

[connection signal="body_enter" from="balloons" to="." method="_on_balloons_body_enter"]


